# SampleProject

./: CMakeLists.txt
Exec/: CMakeLists.txt  main.cpp
QT6CMake/: CMakeLists.txt  yourlibrary-config.cmake
QT6CMake/cmake/: yourlibrary-config.cmake
QT6CMake/include/: mainwindow.h
QT6CMake/include/yourlibrary/: mainwindow.h
QT6CMake/src/: mainwindow.cpp
QT6CMake/src/yourlibrary/: mainwindow.cpp
